<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="horizontal"
    android:paddingLeft="20dp">

    <ImageView
        android:id="@+id/image"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.25"
        android:adjustViewBounds="true"
        android:contentDescription="@string/todo"
        android:maxWidth="50dp"
        android:maxHeight="50dp" />

    <TextView
        android:id="@+id/photo_name"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="6"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />

    <Button
        android:id="@+id/move_photo"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        android:background="#FFFFFF"
        android:gravity="center"
        android:onClick="movePhoto"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:text="@string/move"
        android:textAlignment="center"
        android:textSize="12sp" />

    <Button
        android:id="@+id/delete_photo"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        android:gravity="center"
        android:onClick="deletePhoto"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:text="@string/delete"
        android:textSize="12sp" />

</LinearLayout>